# PythonWEBTask6

homework6/: connect.py  create-table.sql  main.py  pyproject.toml  query-10.sql  query-3.sql  query-4.sql  query-5.sql  query-6.sql  query-7.sql  query-8.sql  query-9.sql  query_1.sql  query_2.sql
